added site folder

--- a/_config.yml
+++ b/_config.yml
@@ -6,11 +6,11 @@ baseurl:            ""
 url:                "https://startbootstrap.github.io"
 
 # Social Profiles
-twitter_username:   
-github_username:    
+twitter_username: liamhaggerty6  
+github_username:    liamhaggerty1
 facebook_username:  
 instagram_username:  
-linkedin_username:
+linkedin_username: liam-haggerty
 
 # Add your google-analytics ID here to activate google analytics
 google_analytics:   UA-XXXXXXXXX-X # out your google-analytics code
