--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,37 +1,48 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
-jobs:
-  build:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+executors:
+  my-executor:
     docker:
-      - image: cimg/ruby:3.1.2
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
-    steps:
-      - checkout
-      - run: ruby --version
+      - image: buildpack-deps:jessie
+        auth:
+          username: mydockerhub-user
+          password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
+    working_directory: /tmp
 
-  deploy:
-    machine:
-      image: ubuntu-2004:current
-    resource_class: medium
+jobs:
+  flow:
+    executor: my-executor
     steps:
-       - add_ssh_keys:
-          fingerprints:
-            - "49:58:84:89:17:f5:9c:a4:aa:ee:bf:6f:de:66:8d:6d"
-       - run:
-            name: Deploy Over SSH
-            command: |
-              ssh -o StrictHostKeyChecking=no circleci@148.100.79.227 "sudo touch /tmp/testing.txt"
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
+      - run: mkdir -p workspace
+      - run: echo "Hello, world!" > workspace/echo-output
+
+      # Persist the specified paths (workspace/echo-output) into the workspace for use in downstream job.
+      - persist_to_workspace:
+          # Must be an absolute path, or relative path from working_directory. This is a directory on the container which is
+          # taken to be the root directory of the workspace.
+          root: workspace
+          # Must be relative path from root
+          paths:
+            - echo-output
+
+  downstream:
+    executor: my-executor
+    steps:
+      - attach_workspace:
+          # Must be absolute path or relative path from working_directory
+          at: /tmp/workspace
+
+      - run: |
+          if [[ `cat /tmp/workspace/echo-output` == "Hello, world!" ]]; then
+            echo "It worked!";
+          else
+            echo "Nope!"; exit 1
+          fi
+
 workflows:
-    build-and-deploy:
-      jobs:
-          # - build
-          - deploy
+  btd:
+    jobs:
+      - flow
+      - downstream:
+          requires:
+            - flow
