--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
       - persist_to_workspace:
           root: _site
           paths:
-            - /Users/liamhaggerty/Desktop/CMPT330-Project/_site
+            - /_site
 
 
   deploy:
