--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
       - checkout
       - run: ruby --version
       - run: bundle update
-      - run: bundle exec jekyll serve
+      - run: jekyll serve
       - persist_to_workspace:
           root: CMPT330-Project
           paths:
@@ -42,3 +42,5 @@ workflows:
       jobs:
           - build
           - deploy
+
+# VS Code Extension Version: 1.4.0
