--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,26 +18,9 @@ jobs:
       - run: bundle update
       - run: bundle exec jekyll serve
       - persist_to_workspace:
-          root: /CMPT330-Project/_site
+          root: /CMPT330-Project
           paths:
-            - 2020
-            - 2022
-            - assets
-            - bin
-            - img
-            - posts
-            - about.html
-            - contact.html
-            - feed.xml
-            - index.html
-            - jekyll-theme-clean-blog.gemspec
-            - LICENSE
-            - package-lock.json
-            - package.json
-            - README.md
-            - robots.txt
-            - screenshot.png
-            - sitemap.xml
+            - _site
 
 
   deploy:
